apps/cli/crates/onequery-cli/src/presentation/snapshots/onequery__presentation__api_failure__tests__rendered_decode_error_snapshot.snap
---
source: crates/onequery-cli/src/presentation/api_failure.rs
expression: "render_error(&error, EffectiveOutputMode::Text)"
---
Error: query failed
Command: onequery query exec --source warehouse --sql "select 1"
Stage: execute_query
Why: failed to decode query response: expected value at line 1 column 1
Request ID: req_decode
Try:
  - retry onequery query exec --source warehouse --sql "select 1"

Report: onequery doctor report --last
