apps/cli/crates/onequery-cli/src/presentation/snapshots/onequery__presentation__api_failure__tests__rendered_forbidden_problem_uses_problem_hint_snapshot.snap
---
source: crates/onequery-cli/src/presentation/api_failure.rs
expression: "render_error(&error, EffectiveOutputMode::Text)"
---
Error: Forbidden
Command: onequery org list
Stage: resolve_org
Why: this account can no longer access the org list
Request ID: req_org_auth
Hint: refresh your session and retry
Try:
  - refresh your session and retry
