apps/cli/crates/onequery-cli/src/presentation/snapshots/onequery__presentation__api_failure__tests__rendered_transport_error_snapshot.snap
---
source: crates/onequery-cli/src/presentation/api_failure.rs
expression: "render_error(&error, EffectiveOutputMode::Text)"
---
Error: org list failed
Command: onequery org list
Stage: http
Why: failed to reach org list endpoint: operation timed out
Try:
  - retry onequery org list
Explain: onequery explain transport_error
