apps/cli/crates/onequery-cli/src/presentation/snapshots/onequery__presentation__api_failure__tests__rendered_unauthorized_problem_guides_source_reauth_snapshot.snap
---
source: crates/onequery-cli/src/presentation/api_failure.rs
expression: "render_error(&error, EffectiveOutputMode::Text)"
---
Error: Not Logged In
Command: onequery source show warehouse
Stage: auth
Why: stored credentials are no longer authorized
Request ID: req_source_auth
Hint: login via the OneQuery web app and retry
Try:
  - onequery auth login
Explain: onequery explain not_logged_in
