apps/cli/crates/onequery-cli/src/presentation/snapshots/onequery__presentation__api_failure__tests__rendered_validation_problem_includes_structured_issues_snapshot.snap
---
source: crates/onequery-cli/src/presentation/api_failure.rs
expression: "render_error(&error, EffectiveOutputMode::Text)"
---
Error: Invalid Request
Command: onequery query execute --source '' --sql "delete from events"
Stage: execute_query
Why: request body contains invalid fields
Request ID: req_validation
Hint: correct the request and retry
Validation:
  - source: source is required (too_small)
  - sql: query must be read-only (custom)
Try:
  - correct the request and retry
